--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     height: 100vh;
-    background-color: rgb(224, 224, 224);
+    background-color: rgb(0, 0, 0);
     margin: 0px;
     padding-top: 5em;
     box-sizing:border-box;
@@ -9,14 +9,15 @@ body{
 .container{
     display: grid;
     grid-template: 12em 12em 12em / 12em 12em 12em;
-    gap: 1em;
+    gap: .5em;
     width: fit-content;
     height: fit-content;
     margin: 0 auto;
     /* margin-top: 5em; */
 }
 .board-space{
-    background-color: rgb(255, 157, 0);
+    background-color: rgb(255, 238, 216);
+    /* border: 1px solid rgb(157, 157, 157); */
     font-size: 11em;
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
@@ -59,6 +60,7 @@ body{
     justify-content: center;
     color: rgb(0, 0, 0);
     box-sizing: border-box;
+    filter: invert(100);
 }
 .button-reset {
   align-items: center;
